places updates, TODO change columns at 1180px bp to avoid overlap

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,7 @@
   background-color: #2a2c2f;
   color: #fff;
   padding: 0;
+  overflow-x: hidden;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
