--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -10,6 +10,15 @@
 
 @media screen and (max-width: 767px) {
   .place__image {
+    max-height: 340px;
+    width: 100vw;
+    margin: 0;
+    padding: 10px 0 10px 0;
+    object-position: center;
+    }
+
+@media screen and (max-width: 340px) {
+  .place__image {
     max-width: 340px;
     width: 100vw;
     margin: 0;
