--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,19 +2,18 @@
   grid-column: 2;
   grid-row: 1;
   padding: 0;
+  align-self: flex-end;
 }
 
 @media screen and (max-width: 768px){
   .place__website {
     padding: 0;
+    align-self: flex-start;
   }
-
 }
 
 @media screen and (max-width: 767px){
   .place__website {
     padding: 0 16px 0;
   }
-
-
 }
