--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,6 @@
 .places {
-  /*max-width: 77vw;*/
   margin: 0 auto;
-  padding: 0 148px 0;
+  padding: 92px 148px 0;
 }
 
 .places:last-child {
@@ -10,20 +9,19 @@
 
 @media screen and (max-width: 1024px) {
   .places {
-    padding: 0 48px 0;
+    padding: 92px 48px 0;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places {
-    padding: 0 24px 0;
-    /*padding: 10px 0 0;*/
+    padding: 88px 24px 0;
   }
-
 }
 
 @media screen and (max-width: 767px) {
   .places {
     max-width: 100vw;
+    padding: 64px 0 0;
   }
 }
